--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" id="primeiro-paciente">
+						<tr class="pacientes">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -35,7 +35,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente">
+						<tr class="pacientes">
 							<td class="info-nome">João</td>
 							<td class="info-peso">80</td>
 							<td class="info-altura">1.72</td>
@@ -43,7 +43,7 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente" >
+						<tr class="pacientes" >
 							<td class="info-nome">Erica</td>
 							<td class="info-peso">54</td>
 							<td class="info-altura">1.64</td>
@@ -51,14 +51,14 @@
 							<td class="info-imc">0</td>
 						</tr>
 
-						<tr class="paciente">
+						<tr class="pacientes">
 							<td class="info-nome">Douglas</td>
 							<td class="info-peso">85</td>
 							<td class="info-altura">1.73</td>
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
 						</tr>
-						<tr class="paciente" >
+						<tr class="pacientes">
 							<td class="info-nome">Tatiana</td>
 							<td class="info-peso">46</td>
 							<td class="info-altura">1.55</td>
