--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
-				<form>
+				<form id="form-adiciona">
 					<div class="">
 						<label for="nome">Nome:</label>
 						<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
@@ -96,6 +96,7 @@
 
 		</section>
 
-	<script src="js/principal.js"></script>
+	<script src="js/calcula-imc.js"></script>
+	<script src="js/form.js"></script>
 	</body>
 </html>
