--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 		<section class="container">
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
+			<ol id="mensagem-error"></ol>
 				<form id="form-adiciona">
 					<div class="">
 						<label for="nome">Nome:</label>
@@ -98,5 +99,6 @@
 
 	<script src="js/calcula-imc.js"></script>
 	<script src="js/form.js"></script>
+	<script src="js/remove.js"></script>
 	</body>
 </html>
