Criada requisicao para api e ajustes e filtro de pesquisa

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtre:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table>
 					<thead>
 						<tr>
@@ -67,7 +69,8 @@
 						</tr>
 					</tbody>
 				</table>
-
+				<span id="erro-ajax"></span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar pacientes</button>
 			</section>
 		</main>
 
@@ -100,5 +103,7 @@
 	<script src="js/calcula-imc.js"></script>
 	<script src="js/form.js"></script>
 	<script src="js/remove.js"></script>
+	<script src="js/filtra.js"></script>
+	<script src="js/buscar-paciente.js"></script>
 	</body>
 </html>
